[gd_scene load_steps=14 format=2]

[ext_resource path="res://levels/tutorial/02/Level0-2.gd" type="Script" id=1]
[ext_resource path="res://entities/map/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/tutorial/02/lightmap/lightmap.lmbake" type="BakedLightmapData" id=3]
[ext_resource path="res://entities/level/PlayerSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/doors/DoorSingle.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/computer/Computer.tscn" type="PackedScene" id=11]
[ext_resource path="res://entities/doors/Door.tscn" type="PackedScene" id=12]
[ext_resource path="res://entities/button/ButtonItem.tscn" type="PackedScene" id=13]
[ext_resource path="res://entities/screen/WideScreen.tscn" type="PackedScene" id=14]
[ext_resource path="res://levels/tutorial/02/info.tres" type="Resource" id=15]

[sub_resource type="GDScript" id=3]
script/source = "extends Door


"

[sub_resource type="GDScript" id=4]
script/source = "extends WallButton


# The door instance
var door = getObject(\"Door\")
# The screen instance
var screen = getObject(\"Screen\")


# Called when the button is pressed
func onButtonPressed():
	# Use the open(\"password\") method on the door here
	# But with calling the getValue() on the screen to get the password
	
	pass # End of the function
"

[sub_resource type="GDScript" id=6]
script/source = "extends Screen


"

[node name="Level0-2" type="Spatial"]
script = ExtResource( 1 )
level_info = ExtResource( 15 )
map = NodePath("Map")
spawner = NodePath("PlayerSpawner")

[node name="Map" parent="." instance=ExtResource( 2 )]
data = {
"cells": PoolIntArray( 1, 0, 1074790400, 3, 0, 1074790400, 5, 0, 1074790400, 7, 0, 1074790400, 9, 0, 1074397189, 65535, 0, 1073741829, 262145, 0, 1074921497, 262147, 0, 1074921497, 262149, 0, 1074921497, 262151, 0, 1074921497, 262153, 0, 1074921497, 327679, 0, 1074921497, 10, 1, 1075183648, 65526, 1, 1074397214, 65528, 1, 1073741832, 65530, 1, 1073741856, 65532, 1, 1073741831, 65534, 1, 1074397217, 1, 2, 1074790400, 3, 2, 1075183620, 5, 2, 1075183620, 7, 2, 1074790400, 9, 2, 1074397189, 65527, 2, 1073741826, 65529, 2, 1075183621, 65531, 2, 1075183619, 65533, 2, 1075183619, 65535, 2, 1073741830, 262145, 2, 1074921497, 262147, 2, 1074921495, 262149, 2, 1074921496, 262151, 2, 1074921497, 262153, 2, 1074921497, 327671, 2, 1074921497, 327673, 2, 1074921497, 327675, 2, 1074921497, 327677, 2, 1074921494, 327679, 2, 1074921497, 10, 3, 1075183627, 65526, 3, 1074790412, 1, 4, 1074790400, 3, 4, 1075183620, 5, 4, 1075183620, 7, 4, 1074790400, 9, 4, 1074397189, 65527, 4, 1073741829, 65529, 4, 1074397190, 65535, 4, 1074790406, 262145, 4, 1074921497, 262147, 4, 1074921496, 262149, 4, 1074921495, 262151, 4, 1074921497, 262153, 4, 1074921497, 327671, 4, 1074921497, 327673, 4, 1074921497, 327675, 4, 1074921497, 327677, 4, 1074921494, 327679, 4, 1074921497, 10, 5, 1075183648, 65526, 5, 1074790432, 65530, 5, 1074790430, 65532, 5, 1074397191, 65534, 5, 1074397217, 1, 6, 1074790400, 3, 6, 1074790400, 5, 6, 1074790400, 7, 6, 1074790400, 9, 6, 1074397189, 65529, 6, 1074397187, 65535, 6, 1073741829, 262145, 6, 1074921497, 262147, 6, 1074921497, 262149, 6, 1074921497, 262151, 6, 1074921497, 262153, 6, 1074921497, 327671, 6, 1074921497, 327673, 6, 1074921497, 327679, 6, 1074921497, 10, 7, 1075183623, 65526, 7, 1074790412, 65530, 7, 1075183623, 65534, 7, 1074790407, 0, 8, 1074397224, 1, 8, 1074790405, 3, 8, 1074790405, 5, 8, 1074790405, 7, 8, 1074790405, 8, 8, 1074397224, 9, 8, 1074397186, 65529, 8, 1074397187, 65535, 8, 1074790402, 262145, 8, 1074921497, 262147, 8, 1074921497, 262149, 8, 1074921497, 262151, 8, 1074921497, 262153, 8, 1074921497, 327671, 8, 1074921497, 327673, 8, 1074921497, 327679, 8, 1074921497, 0, 9, 1074397191, 2, 9, 1074397216, 4, 9, 1074397195, 6, 9, 1074397216, 8, 9, 1074397191, 10, 9, 1073741855, 65526, 9, 1074397217, 65528, 9, 1074397221, 65530, 9, 1074397217, 65534, 9, 1073741855, 65528, 10, 1074397226, 0, 65523, 1073741834, 2, 65523, 1073741856, 4, 65523, 1073741834, 6, 65523, 1073741856, 8, 65523, 1073741834, 10, 65523, 1073741856, 12, 65523, 1073741834, 14, 65523, 1074790433, 65534, 65523, 1074790430, 1, 65524, 1075183619, 3, 65524, 1075183621, 5, 65524, 1075183621, 7, 65524, 1075183619, 9, 65524, 1075183619, 11, 65524, 1075183619, 13, 65524, 1075183618, 65535, 65524, 1073741826, 262145, 65524, 1074921497, 262147, 65524, 1074921497, 262149, 65524, 1074921497, 262151, 65524, 1074921497, 262153, 65524, 1074921497, 262155, 65524, 1074921497, 262157, 65524, 1074921500, 327679, 65524, 1074921497, 14, 65525, 1075183653, 65534, 65525, 1074790412, 3, 65526, 1074790406, 5, 65526, 1074397190, 13, 65526, 1074397186, 65535, 65526, 1074790402, 262145, 65526, 1074921497, 262147, 65526, 1074921497, 262149, 65526, 1074921497, 262151, 65526, 1074921497, 262153, 65526, 1074921497, 262155, 65526, 1074921497, 262157, 65526, 1074921500, 327679, 65526, 1074921497, 0, 65527, 1074397191, 2, 65527, 1074790430, 6, 65527, 1074790430, 8, 65527, 1074397191, 10, 65527, 1074397216, 12, 65527, 1074397191, 14, 65527, 1074790433, 65534, 65527, 1074790430, 3, 65528, 1073741827, 262147, 65528, 1074921497, 262149, 65528, 1074921497, 2, 65529, 1074790407, 6, 65529, 1075183623, 3, 65530, 1074790402, 5, 65530, 1074397186, 262147, 65530, 1074921497, 262149, 65530, 1074921497, 2, 65531, 1074790433, 4, 65531, 1074397219, 6, 65531, 1074790433, 0, 65533, 1073741839, 2, 65533, 1074790433, 4, 65533, 1073741860, 6, 65533, 1074790433, 8, 65533, 1073741839, 10, 65533, 1073741855, 65534, 65533, 1073741855, 1, 65534, 1075183621, 3, 65534, 1075183621, 5, 65534, 1075183621, 7, 65534, 1075183621, 9, 65534, 1075183618, 65535, 65534, 1073741826, 262145, 65534, 1074921497, 262147, 65534, 1074921497, 262149, 65534, 1074921497, 262151, 65534, 1074921497, 262153, 65534, 1074921497, 327679, 65534, 1074921497, 10, 65535, 1075183623, 65534, 65535, 1074790407 )
}

[node name="PlayerSpawner" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5, 2, 8 )

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2.5, -1 )
extents = Vector3( 14.5, 4, 14 )
quality = 0
use_hdr = false
use_color = false
capture_quality = 0
light_data = ExtResource( 3 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 3, 3.5 )
omni_range = 12.0

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 3, -8.54 )
omni_range = 7.0

[node name="OmniLight5" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 3, -10.54 )

[node name="OmniLight3" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, 3, -10.54 )
omni_range = 6.0

[node name="OmniLight4" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5, 3, 3.46 )
omni_range = 8.0

[node name="Door" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.5, -3 )
code = SubResource( 3 )
display_name = "Door"
description = "Open this door to exit"
is_programmable = true
locked = true

[node name="Computer" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.5, 3.5 )
display_name = "Computer"
description = "Use this computer to program objects"
is_interactable = true
interaction_message = "Use"

[node name="DoorSingle" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.5, 0.5, -10.5 )
display_name = "ExitDoor"
description = "Open to complete the level"
is_interactable = true
interaction_message = "Open"

[node name="Button" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.5, 2, -2.14175 )
code = SubResource( 4 )
display_name = "Button"
description = "Try to program this button"
is_programmable = true
is_interactable = true
interaction_message = "Press"
connect_pressed = true

[node name="PasswordScreen" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 3.64932, -2.66559 )
code = SubResource( 6 )
display_name = "Screen"
description = "Displays a string. You may need it to open the door"
is_programmable = true
locked = true

[node name="PasswordChanger" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="opened" from="Door" to="." method="_on_Door_opened"]
[connection signal="interact" from="DoorSingle" to="." method="_on_DoorSingle_interact"]
[connection signal="value_changed" from="PasswordScreen" to="." method="_on_PasswordScreen_value_changed"]
[connection signal="timeout" from="PasswordChanger" to="." method="_on_PasswordChanger_timeout"]
